--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <!-- navbar start -->
-        <!-- <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
                 <a class="navbar-brand fs-3 text-primary fw-bold" href="#">Pro Instruction</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -42,8 +42,8 @@
                
                 </div>
             </div>
-        </nav> -->
-        <!-- navbar and -->
+        </nav>
+        <!-- navbar end -->
     </header>
 
 
