--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Place To Learn</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/8a7ff70977.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -356,6 +357,29 @@
 
     
   </section>
+<!-- <footer class="site-footer text-white bg-dark">
+    <div class="container">
+        <div class="row ">
+            <div class=" mb-5">
+                <h3 class="text-center mt-3">Pro Edu</h3>
+               <p class="text-center"> <small>Offuce 41,zawaya Buildin,Ghala Muscat, <br> Sultanate of Oman <br> Privacy Policy | Terms of use </small></p>
+               <div class="d-flex justify-content-center gap-2">
+                <div>
+                <i class="fa-brands fa-square-facebook"></i>
+               </div>
+               <div><i class="fa-brands fa-twitter"></i></div>
+               <div><i class="fa-brands fa-linkedin"></i></div>
+               <div><i class="fa-brands fa-square-instagram"></i></div>
+               </div>
+            </div>
+        </div>
+    </div>
+
+
+
+</footer> -->
+
+
 
 
 
