--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
     
   </section>
-<!-- <footer class="site-footer text-white bg-dark">
+<footer class="site-footer text-white bg-dark">
     <div class="container">
         <div class="row ">
             <div class=" mb-5">
@@ -377,7 +377,7 @@
 
 
 
-</footer> -->
+</footer>
 
 
 
